@@ -6,6 +6,7 @@ MovieJukebox 2.4 BETA
 ---------------------
  - Enhancement  #1822 Overlay for fanart
  - Enhancement  #1823 Ability to skip genres
+ - Fixed defect #1825 Order of addFrame and roundCorners changed
 
 MovieJukebox 2.3
 ----------------
